# provant_software_Ro

./: .gitignore  README.md
io-board/stm32f4/: core
io-board/stm32f4/app/firmware/: .gitignore  Makefile
io-board/stm32f4/app/firmware/doc/: Doxyfile
io-board/stm32f4/app/remote-controlled-flight/: .gitignore  CMakeLists.txt.OLD  FreeRTOSConfig.h  Makefile  main.c  pv_module_co.c  pv_module_co.h  pv_module_do.c  pv_module_do.h  pv_module_esc.c  pv_module_gps.c  pv_module_gps.h  pv_module_in.c  pv_module_in.h  pv_module_io.c  pv_module_io.h  pv_module_serial.c  pv_module_serial.h  pv_module_servo.c  pv_module_servo.h  pv_module_sm.c  pv_module_sm.h
io-board/stm32f4/app/remote-controlled-flight/doc/: Doxyfile  pages.dox  setup.dox
io-board/stm32f4/app/testes/: main.c  pv_module_esc.c  pv_module_esc.h  pv_module_serial.c  pv_module_serial.h  pv_module_servo.c  pv_module_servo.h  stm32f4.cmake
io-board/stm32f4/app/testes/doc/: log.txt
io-board/stm32f4/base/hal/: c_common_i2c.c  c_common_i2c.h  c_common_uart.c  c_common_uart.h  stm32f4xx_conf.h
io-board/stm32f4/base/lib/provant/: c_common_debug.c  c_common_debug.h  c_common_utils.c  c_common_utils.h  pv_typedefs.h
io-board/stm32f4/base/modules/datapr/: c_datapr_MadgwickAHRS.c  c_datapr_MadgwickAHRS.h  c_datapr_MahonyAHRS.c  c_datapr_MahonyAHRS.h  c_datapr_MultWii.c  c_datapr_MultWii.h  c_datapr_control.h  c_datapr_filter.c  c_datapr_filter.h  c_datapr_protocolo.c  c_datapr_protocolo.h  protocolo.c  protocolo.h
io-board/stm32f4/base/modules/io/: c_io_blctrl.c  c_io_blctrl.h  c_io_herkulex.c  c_io_herkulex.h  c_io_imu.c  c_io_imu.h  c_io_imu_MPU6050.c  c_io_imu_MPU6050.h  c_io_imu_bmp180.c  c_io_imu_bmp180.h  c_io_novatel.c  c_io_novatel.h  c_io_servos.c  c_io_servos.h  c_io_sonar.c  c_io_sonar.h
io-board/stm32f4/base/modules/rc/: c_rc_BS_control.c  c_rc_BS_control.h  c_rc_HIL.c  c_rc_HIL.h  c_rc_Hinfload_control.c  c_rc_Hinfload_control.h  c_rc_LQR_control.c  c_rc_LQR_control.h  c_rc_commons.c  c_rc_commons.h  (+6 more)
io-board/stm32f4/common/system/: stm32f4xx_it.c  system_stm32f4xx.c
io-board/stm32f4/core/cmsis/: Makefile
io-board/stm32f4/core/system/: stm32f4xx_it.c  stm32f4xx_it.h  system_stm32f4xx.c
io-board/stm32f4/lib/cmsis/: startup_stm32f4xx.s
io-board/stm32f4/prj-firmware/: FreeRTOSConfig.h
io-board/stm32f4/prj-firmware/doc/: pages.dox
io-board/stm32f4/prj-remote-controlled-flight/: .cproject  .gitignore  .project  FreeRTOSConfig.h  Makefile  TODO  core  main.c  old2_main.cll  old_main.c  old_main.cll
io-board/stm32f4/prj-remote-controlled-flight/doc/: pages.dox
main-board/Readme/: big.sh  tutorial  uEnv.txt
main-board/prj-remote-controlled-flight/: CMakeLists.txt
main-board/prj-remote-controlled-flight/common/inc/: AbstractMessageInterface.h  AbstractModuleManager.h  debug.h
main-board/prj-remote-controlled-flight/common/src/: AbstractMessageInterface.cpp  AbstractModuleManager.cpp
main-board/prj-remote-controlled-flight/doc/: Doxyfile
main-board/prj-remote-controlled-flight/main/src/: main.cpp
main-board/prj-remote-controlled-flight/subsystems/common/BeagleInterface/src/: uart.cpp
main-board/prj-remote-controlled-flight/subsystems/common/Controller/inc/: LQRControler.h  MpcBirotor.h  MpcControler.h  MpcLoad.h
main-board/prj-remote-controlled-flight/subsystems/common/Controller/src/: LQRControler.cpp  MpcBirotor.cpp  MpcControler.cpp  MpcLoad.cpp
main-board/prj-remote-controlled-flight/subsystems/common/MathNeon/: CMakeLists.txt
main-board/prj-remote-controlled-flight/subsystems/common/MathNeon/inc/: MathNeon.h
main-board/prj-remote-controlled-flight/subsystems/common/MathNeon/src/: MathNeon.cpp
main-board/prj-remote-controlled-flight/subsystems/common/Models/inc/: AircraftModel.h  LoadTranportationModel.h
main-board/prj-remote-controlled-flight/subsystems/common/Models/src/: AircraftModel.cpp
main-board/prj-remote-controlled-flight/subsystems/common/Provant/inc/: proVantProtocol.h  proVantTypes.h  provant_const.h  vant.h
main-board/prj-remote-controlled-flight/subsystems/common/Provant/src/: proVantProtocol.cpp  vant.cpp
main-board/prj-remote-controlled-flight/subsystems/common/Trajectory/inc/: ReferenceTrajectory.h
main-board/prj-remote-controlled-flight/subsystems/common/Trajectory/src/: ReferenceTrajectory.cpp
main-board/prj-remote-controlled-flight/subsystems/common/inc/: proVantTypes.h
main-board/prj-remote-controlled-flight/subsystems/common/qpOases/src/: QProblem.cpp
main-board/prj-remote-controlled-flight/subsystems/subsys_CommLowLevel/: CMakeLists.txt
main-board/prj-remote-controlled-flight/subsystems/subsys_CommLowLevel/inc/: CommLowLevelInterface.h  CommLowLevelManager.h  multwii_const.h  proVantProtocol.h  provant_const.h  uart.h  vant.h
main-board/prj-remote-controlled-flight/subsystems/subsys_CommLowLevel/src/: CommLowLevelInterface.cpp  CommLowLevelManager.cpp  proVantProtocol.cpp  uart.cpp  vant.cpp  white_box_test.cpp
main-board/prj-remote-controlled-flight/subsystems/subsys_ContinuousControl/: CMakeLists.txt
main-board/prj-remote-controlled-flight/subsystems/subsys_ContinuousControl/inc/: ContinuousControlInterface.h  ContinuousControlManager.h  LQRControler.h  LoadTranportationModel.h  MpcBirotor.h  MpcControler.h  ReferenceTrajectory.h  TESTActuator.h
main-board/prj-remote-controlled-flight/subsystems/subsys_ContinuousControl/src/: AircraftModel.cpp  ContinuousControlInterface.cpp  ContinuousControlManager.cpp  LQRControler.cpp  LoadTranportationModel.cpp  MpcBirotor.cpp  MpcControler.cpp  MpcLoad.cpp  ReferenceTrajectory.cpp  TESTActuator.cpp  white_box_test.cpp
main-board/prj-remote-controlled-flight/subsystems/subsys_DataProcessing/: CMakeLists.txt
main-board/prj-remote-controlled-flight/subsystems/subsys_DataProcessing/doc/: Doxyfile
main-board/prj-remote-controlled-flight/subsystems/subsys_DataProcessing/inc/: DataProcessingInterface.h  DataProcessingManager.h
main-board/prj-remote-controlled-flight/subsystems/subsys_DataProcessing/src/: DataProcessingInterface.cpp  DataProcessingManager.cpp  white_box_test.cpp
(+202 files in other folders)
